_specs/datascraper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datascraper-service
spec:
  selector:
    app: datascraper
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datascraper-deployment
  labels:
    app: datascraper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datascraper
  template:
    metadata:
      labels:
        app: datascraper
    spec:
      containers:
      - name: datascraper
        image: ${datascraper_image}
        volumeMounts:
        - name: persistent-storage
          mountPath: /mnt/w
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: efs-claim
