_specs/loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-service
  namespace: default
  labels:
    app: webserver
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "${ssl_cert}"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
spec:
  selector:
    app: webserver
  ports:
  - protocol: TCP
    port: 443 
    name: https
    targetPort: 80
  type: LoadBalancer
